tests/golden/type_errors/function_return_assignment_type_mismatch.cd
fun one() {
  return 1;
}
let x = one();
x = "bad";
